[package]
name = "dsp_perf"
version = "0.1.0"
authors = ["Magnus Hallin <mhallin@fastmail.com>"]
edition = "2018"

[[bench]]
name = "dsp_bench"
harness = false

[dependencies]
plotters = "0.2"
criterion = "0.3"

[dev-dependencies]

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
